# OpenWebServiceStorage

./: .gitignore  CMakeLists.txt  OpenWebStorage.kdev4  main.cpp
blob/: Blob.cpp  Blob.h  SimpleBlob.cpp  SimpleBlob.h
blob/communications/: DeleteRequest.cpp  DeleteRequest.h  DeleteResponse.cpp  DeleteResponse.h  GetRequest.cpp  GetRequest.h  GetResponse.cpp  GetResponse.h  ListRequest.cpp  ListRequest.h  ListResponse.cpp  ListResponse.h  PutRequest.cpp  PutRequest.h  PutResponse.cpp  PutResponse.h
blob/types/: ObjectKey.cpp  ObjectKey.h
test/: Blob_test.cc
